client/src/style/Dashboard/projectCard.scss
@use "../index.scss";

.dashboard-projects-list-item {
    background: radial-gradient(
    farthest-corner at 0px 0px,
    index.$oxford-blue 70%,
    rgba(20, 33, 61, 0.8) 100%);
    color: white;
    width: 15rem;
    height: 8rem;
    border-radius: 0.5rem;
    position: relative;
    padding: 1rem;
    cursor: pointer;

    .projects-list-item-delete {
        position: absolute;
        color: white;
        top: 5px;
        right: 5px;
        border: 1px solid transparent;
        @include index.center-elements;
        border-radius: 50%;
        transition:
            color 0.3s ease,
            background-color 0.3s ease;
    }

    .projects-list-item-delete:hover {
        background-color: white;
        transition: background-color 0.3s ease;

        .projects-list-item-delete-icon {
            color: index.$oxford-blue;
            transition: color 0.3s ease;
        }
    }
}

